# tic-tac-toe

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
experiments/: benchmark_minimax.py  test_maturin.py
python/tic_tac_toe/: __init__.py  __main__.py  bot.py  game.py  multiplayer.py  tic_tac_toe.pyi
rs_minimax/: Cargo.toml  pyproject.toml
rs_minimax/src/: lib.rs  lib_back.rs
src/: bot_multiplayer.py  bot_singleplayer.py  draft.py  echobot.py  example_bot.py  example_bot2.py  exceptions.py  lib.rs
src/tic_tac_toe/: bot.py  bot_helpers.py  exceptions.py  game.py  multiplayer.py  notifications.py
tests/: test_game.py  test_multiplayer.py
