[project]
name = "tic-tac-toe"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Pavel", email = "60060559+pyrogn@users.noreply.github.com"},
]
dependencies = [
    "python-telegram-bot>=20.7",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
package-type = "library"
